[gd_scene load_steps=2 format=3 uid="uid://dy23eejeptth5"]

[ext_resource type="Script" uid="uid://dxncdw0b56wyv" path="res://scrips/level_select.gd" id="1_3shnc"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_3shnc")

[node name="Level1Button" type="Button" parent="."]
offset_left = 415.0
offset_top = 103.0
offset_right = 765.0
offset_bottom = 203.0
disabled = true
text = "Level 1"

[node name="Level2Button" type="Button" parent="."]
custom_minimum_size = Vector2(5, 2)
offset_left = 415.0
offset_top = 273.0
offset_right = 765.0
offset_bottom = 373.0
disabled = true
text = "Level 2"

[node name="Level3Button" type="Button" parent="."]
offset_left = 415.0
offset_top = 443.0
offset_right = 765.0
offset_bottom = 543.0
disabled = true
text = "Level 3"

[node name="BackButton" type="Button" parent="."]
offset_right = 124.0
offset_bottom = 44.0
text = "Back"

[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
